# anki-sync-server

./: .bazelrc  BUILD.bazel  WORKSPACE  defs.bzl  late_deps.bzl  repos.bzl
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/library-scripts/: common-debian.sh  python-debian.sh
scripts/: status.sh
src/: BUILD.bazeldel  ankisyncd.conf  exploredb.py  requirements-dev.txt  requirements.txt
src/ankisyncd/: __init__.py  __main__.py  collection.py  config.py  sync.py  sync_app.py  thread.py
